--- a/package.json
+++ b/package.json
@@ -9,17 +9,29 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.18.2",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "axios": "^1.4.0",
+    "cypress": "^12.14.0",
     "expo": "~48.0.18",
     "expo-font": "~11.1.1",
+    "expo-linear-gradient": "~12.1.2",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-native": "0.71.8",
+    "react-native-chart-kit": "^6.12.0",
+    "react-native-charts-wrapper": "^0.5.11",
+    "react-native-elements": "^3.4.3",
+    "react-native-linear-gradient": "^2.7.2",
+    "react-native-paper": "^5.8.0",
+    "react-native-progress": "^5.0.0",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
+    "react-native-select-dropdown": "^3.3.4",
     "react-native-svg": "13.4.0",
+    "react-native-vector-icons": "^9.2.0",
+    "recoil": "^0.7.7",
     "styled-components": "^6.0.0-rc.3"
   },
   "devDependencies": {
