--- a/package.json
+++ b/package.json
@@ -6,19 +6,21 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "test": "jest"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.18.2",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "axios": "^1.4.0",
-    "cypress": "^12.14.0",
     "expo": "~48.0.18",
     "expo-font": "~11.1.1",
     "expo-linear-gradient": "~12.1.2",
     "expo-status-bar": "~1.4.4",
+    "jest": "^29.5.0",
     "react": "18.2.0",
+    "react-dom": "^18.2.0",
     "react-native": "0.71.8",
     "react-native-chart-kit": "^6.12.0",
     "react-native-charts-wrapper": "^0.5.11",
@@ -31,11 +33,20 @@
     "react-native-select-dropdown": "^3.3.4",
     "react-native-svg": "13.4.0",
     "react-native-vector-icons": "^9.2.0",
+    "react-test-renderer": "^18.2.0",
     "recoil": "^0.7.7",
     "styled-components": "^6.0.0-rc.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@testing-library/jest-native": "^5.4.2",
+    "@testing-library/react-native": "^12.1.2"
+  },
+  "jest": {
+    "preset": "react-native",
+    "setupFiles": [
+      "./jestSetupFile.js"
+    ]
   },
   "private": true
 }
